# beating_wc

./: CMakeLists.txt  README.md
src/: flux.hpp  io_service_on_thread_pool.cpp  io_service_per_thread.cpp  parallel_accumulate.cpp  simple_test_case.cpp  transform_reduce.cpp
src/wc/: getopt.cpp  getopt.hpp  wc_reference.cpp
